==> oldgerman/SAU-G0/SoftWare/SAU-G031G8U6/Libraries/I2C_Wrapper/I2C_Wrapper.cpp <==
#include "I2C_Wrapper.h"
#include "BSP.h"

bool FRToSI2C::Mem_Read(uint16_t DevAddress, uint16_t MemAddress,
		uint8_t *pData, uint16_t Size) {

	if (!lock())		//尝试获取_I2CSemaphore
		return false;

	if (HAL_I2C_Mem_Read(_I2C_Handle, DevAddress, MemAddress,
			I2C_MEMADD_SIZE_8BIT, pData, Size, 500) != HAL_OK) {

		I2C_Unstick();	//传输出错会执行
		unlock();		//释放_I2CSemaphore
		return false;
	}

	unlock();			//释放_I2CSemaphore
	return true;
}

bool FRToSI2C::Mem_Write(uint16_t DevAddress, uint16_t MemAddress,
		uint8_t *pData, uint16_t Size) {

	if (!lock())
		return false;
	if (HAL_I2C_Mem_Write(_I2C_Handle, DevAddress, MemAddress,
			I2C_MEMADD_SIZE_8BIT, pData, Size, 500) != HAL_OK) {

		I2C_Unstick();
		unlock();
		return false;
	}

	unlock();
	return true;
}

void FRToSI2C::unlock() {
#if RTOS_EN
	xSemaphoreGive(_I2CSemaphore);
#else
	_I2CSemaphore = 1;
#endif
}

bool FRToSI2C::lock() {
	bool mark = 0;
#if RTOS_EN
	mark = (xSemaphoreTake(_I2CSemaphore, (TickType_t)1000) == pdTRUE);
#else
	mark = _I2CSemaphore;		//HAL_I2C回调函数执行完毕后，_I2CSemaphore = 1
#endif
	return mark;
}
